--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>N.H.</title>
+	<title>Ben Shell</title>
 	<link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 	<meta http-equiv="pragma" content="no-cache" />
 	<meta name="robots" content="all" />
@@ -17,29 +17,40 @@
 		body { background-color: #333; }
 		p { color: #fff; font-family: Helvetica; font-size: 16px; line-height: 24px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; }
 		a { color: #fff; font-weight: bold; text-decoration: none; border-bottom: 1px solid rgba(255,255,255,0.3); }
-		a:hover { color: #990000; border-bottom: 1px solid rgba(255,255,255,1); }
+		a:hover { color: #ff9900; border-bottom: 1px solid rgba(255,255,255,1); }
 		#monogram { width: 50px; padding: 50px 0 0 0; margin: 0 auto 0 50px; }
-		#about { width: 360px; padding: 0 0 0 150px; margin: -35px 50px 0 auto !important; }
-		@media (max-width: 767px) {
+		#about { width: 360px; padding: 0 0 0 0; margin: 40px auto 0 50px !important; }
+		@media (max-width: 920px) {
 			#monogram { position: relative; width: auto; padding: 20px; margin: 0; }
 			#about { position: relative; width: auto; padding: 20px; margin: 0 !important; }
 			background-image { opacity: 0.2; }
 		}
 	</style>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-362034-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>	
-    
+
 <body>
 
-<!-- swap out for a logo -->
-<div id="monogram">
-	<img src="monogram.png" />
-</div>
-
-<!-- swap out for information about yourself -->
 <div id="about">
-	<p>Naz Hamid is the founder and principal of <a href="http://weightshift.com">Weightshift</a>, a design studio in San Francisco and Chicago. Aside from client work, projects include the community-oriented site <a href="http://interhoods.org">Interhoods</a> and mobile web application, <a href="http://sitby.us">SitBy.Us</a>. The two projects codenamed <em>Suplex</em> and <em>Sleeperhold</em> are aiming to be launched in 2011.</p>
-	<p>He writes about design and tangential topics at <a href="http://weightshift.com/memo">Memo</a>, writes in 140 characters at <a href="http://twitter.com/weightshift">Twitter</a>, posts photos to <a href="http://flickr.com/absenter"/>Flickr</a>, creates 400x300px works-in-progress on <a href="http://dribbble.com/weightshift">Dribbble</a>, sometimes makes moving pictures on <a href="http://vimeo.com/weightshift">Vimeo</a>, records items of interest at <a href="http://svpply.com/weightshift">Svpply</a>, listens to all his music on <a href="http://www.rdio.com/people/weightshift/">Rdio</a> and answers the occasional question on <a href="http://www.quora.com/Naz-Hamid">Quora</a>. He also makes music as <a href="http://murdersandmysteries.com">Murders & Mysteries</a> and released an album in 2010.</p>
-	<p>A <a href="http://en.wikipedia.org/wiki/Third_culture_kid">third-culture kid</a>, Naz has lived on three continents and in three countries. He currently lives in San Francisco, California, a place where he feels comfortable in his own skin.</p> 
+<p><strong>I'm Ben.</strong></p>
+
+<p>I work as a software engineer at <a href="http://www.digitaldeployment.com/" target="_blank">Digital Deployment</a>, a Sacramento-based web development company. I develop with Drupal, a PHP-based open source content management system, as well as other technologies including Ruby, Node.js, and AngularJS.</p>
+
+<p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, cars, and airplanes&mdash;especially if they are built with LEGOs.</p>
+
+<p>I'm really into my hobbies, mostly involving trains. I'm building a backyard garden railroad, which involves skills ranging from landscaping to electronics to modeling. We're part of the <a href="http://www.svgrs.org/" target="_blank">Sacramento Valley Garden Railway Society</a>, of which I'm a board member.</p>
+
+<p>No matter if I'm attending a conference, spending time with my family, or chasing trains, I always love to take photos. You can see more of what I've been up to on <a href="https://www.flickr.com/photos/benjaminshell/">Flickr</a>.
+
+<p>You can also connect with me on <a href="https://twitter.com/benshell" target="_blank">Twitter</a> or <a href="https://www.facebook.com/benshell" target="_blank">Facebook</a> (although I reserve Facebook for people I know personally).</p>
 </div>
 
 <!--include jquery & backstretch-->
@@ -47,12 +58,10 @@
 <script type="text/javascript" src="jquery.backstretch.min.js"></script>
 <script type="text/javascript">
 $(function(){
-     $(window).resize(function(){
-         if($(this).width() >= 767){
-             $.backstretch("nh_bg.jpg", {speed: 150});
-         }
+	$(window).resize(function(){
+		$.backstretch("waterfall.jpg", {speed: 150});
       })
-      .resize();//trigger resize on page load
+      .resize();
 });
 </script>
 
