--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <div id="about">
 <p><strong>I'm Ben.</strong></p>
 
-<p>I work as a software engineer at <a href="http://www.digitaldeployment.com/" target="_blank">Digital Deployment</a>, a Sacramento-based web development company. I develop with Drupal, a PHP-based open source content management system, as well as other technologies including Ruby, Node.js, and AngularJS.</p>
+<p>I work as a software engineer at <a href="http://www.getstreamline.com/" target="_blank">Streamline</a>, a website engine for Special Districts, which is a division of <a href="http://www.digitaldeployment.com/" target="_blank">Digital Deployment</a>, a Sacramento-based web development company. I develop with Ruby on Rails, AngularJS, React, Drupal, and a variety of other technologies.</p>
 
-<p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, cars, and airplanes&mdash;especially if they are built with LEGOs.</p>
+<p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, cars, airplanes, and dinosaurs&mdash;especially if they are built with LEGO.</p>
 
 <p>I'm really into my hobbies, mostly involving trains. I'm building a backyard garden railroad, which involves skills ranging from landscaping to electronics to modeling. We're part of the <a href="http://www.svgrs.org/" target="_blank">Sacramento Valley Garden Railway Society</a>, of which I'm a board member.</p>
 
