--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="about">
 <p><strong>I'm Ben.</strong></p>
 
-<p>I'm a full stack software engineer at living in Sacramento, developing with Ruby on Rails, AngularJS, React, Drupal, and a variety of other technologies.</p>
+<p>I'm a full stack software engineer living in Sacramento, developing with Ruby on Rails, AngularJS, React, Drupal, and a variety of other technologies.</p>
 
 <p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, cars, airplanes, and dinosaurs&mdash;especially if they are built with LEGO.</p>
 
