Updated job and added LinkedIn.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="about">
 <p><strong>I'm Ben.</strong></p>
 
-<p>I'm a full stack software engineer living in Sacramento, developing with Ruby on Rails, AngularJS, React, Drupal, and a variety of other technologies.</p>
+<p>I'm a Front-End Architect at Wire Stone in Sacramento, working with AngularJS, React, and a variety of other technologies.</p>
 
 <p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, cars, airplanes, and dinosaurs&mdash;especially if they are built with LEGO.</p>
 
@@ -50,7 +50,7 @@
 
 <p>No matter if I'm attending a conference, spending time with my family, or chasing trains, I always love to take photos. You can see more of what I've been up to on <a href="https://www.flickr.com/photos/benjaminshell/">Flickr</a>.
 
-<p>You can also connect with me on <a href="https://twitter.com/benshell" target="_blank">Twitter</a> or <a href="https://www.facebook.com/benshell" target="_blank">Facebook</a> (although I reserve Facebook for people I know personally).</p>
+<p>You can also connect with me on <a href="https://twitter.com/benshell" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/benshell" target="_blank">LinkedIn</a>, or <a href="https://www.facebook.com/benshell" target="_blank">Facebook</a> (although I reserve Facebook for people I know personally).</p>
 </div>
 
 <!--include jquery & backstretch-->
