Add my kids new favorite interest

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <p>I'm a Front-End Architect at Wire Stone in Sacramento, working with AngularJS, React, and a variety of other technologies.</p>
 
-<p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, cars, airplanes, and dinosaurs&mdash;especially if they are built with LEGO.</p>
+<p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, cars, airplanes, dinosaurs, and Star Wars&mdash;especially if they are built with LEGO.</p>
 
 <p>I'm really into my hobbies, mostly involving trains. I'm building a backyard garden railroad, which involves skills ranging from landscaping to electronics to modeling. We're part of the <a href="http://www.svgrs.org/" target="_blank">Sacramento Valley Garden Railway Society</a>, of which I'm a board member.</p>
 
