Add target blank

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
 <p>I live in Sacramento, California and work as a Front-End Architect at Wire Stone &mdash; Part of Accenture Interactive. I love working with modern web frameworks like React, Angular, and Vue.js to create engaging user experiences for our clients and exceptional developer experiences for our team. I've been working on the web since I was in high school in the late 90's, and I'm excited about where the journey has taken me.</p>
 
-<p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, dinosaurs, Star Wars, Batman, and Minecraft&mdash;especially if they are built with LEGO. We attend and serve at church at <a href="https://jesusculture.com/sacramento/">Jesus Culture Sacramento</a>.</p>
+<p>I'm a husband and father to an incredible family. My wife blogs about our Christian faith and all the books she's reading at <a href="http://awaitingtheking.com/" target="_blank">AwaitingTheKing.com</a>, and she's in seminary as well. My two boys love trains, dinosaurs, Star Wars, Batman, and Minecraft&mdash;especially if they are built with LEGO. We attend and serve at church at <a href="https://jesusculture.com/sacramento/" target="_blank">Jesus Culture Sacramento</a>.</p>
 
 <p>I'm really into hobbies such as electronics, metalworking, and landscaing&mdash;which all tie back to my interest in trains.  We're part of the <a href="http://www.svgrs.org/" target="_blank">Sacramento Valley Garden Railway Society</a>, and I have a G-scale backyard garden railroad. I've also built a small 7-1/2" gauge steam locomotive that burns coal, and is just big enough to pull my family around the track at the <a href="http://www.svlsrm.org/" target="_blank">Sacramento Valley Live Steamers Railroad Museum</a>.</p>
 
-<p>You can connect with me on <a href="https://www.flickr.com/photos/benjaminshell/">Flickr</a>, <a href="https://twitter.com/benshell" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/benshell" target="_blank">LinkedIn</a>, or <a href="https://www.facebook.com/benshell" target="_blank">Facebook</a> (although I reserve Facebook for people I know personally).</p>
+<p>You can connect with me on <a href="https://www.flickr.com/photos/benjaminshell/" target="_blank">Flickr</a>, <a href="https://twitter.com/benshell" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/benshell" target="_blank">LinkedIn</a>, or <a href="https://www.facebook.com/benshell" target="_blank">Facebook</a> (although I reserve Facebook for people I know personally).</p>
 </div>
 
 <!--include jquery & backstretch-->
